# iotivity

./: .ctags  .dockerignore  .gbs.conf  .gitattributes  .gitignore  .gitlab-ci.yml  .gitreview  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  NOTICE.md  README  README-building-and-running-remote-access-sample.txt  RELEASE  RELEASE.txt  Readme.scons.txt  SConstruct  arduino.scons  artifact_output_locations.txt  auto_build.py  auto_build.sh  buildScript.mk  build_docs.sh  debug.scons  extra_options.scons  gbsbuild.sh  iotivity.pc.in  makefile  oic_svr_db.json  prep.sh  run.bat  scons_script_how_to.txt
Doxygen_Docs/: Doxyfile
Doxygen_Docs/html/: ArduinoLoggerTest_8h_source.html  ArduinoStackTest_8h_source.html  Core_8h_source.html  IClientWrapper_8h_source.html  IServerWrapper_8h_source.html  InProcClientWrapper_8h_source.html  InProcServerWrapper_8h_source.html  InitializeException_8h_source.html  InternalApi_8h_source.html  LiteConnection_8h_source.html  LiteRemoting_8h_source.html  LiteSessionImpl_8h_source.html  LiteTargetDeviceProxy_8h_source.html  MockProtocol_8h_source.html  ModelImpl_8h_source.html  MyMultiResourceHandler_8h_source.html  MyObserverHandler_8h_source.html  MyResourceHandler_8h_source.html  OCApi_8h_source.html  OCException_8h_source.html  OCObject_8h.html  OCObject_8h_source.html  OCObserverHandler_8h.html  OCObserverHandler_8h_source.html  OCObserver_8h.html  OCObserver_8h_source.html  OCPlatformHandler_8h.html  OCPlatformHandler_8h_source.html  OCPlatform_8h.html  OCPlatform_8h_source.html  OCRepresentation_8h.html  OCRepresentation_8h_source.html  OCResourceHandler_8h.html  OCResourceHandler_8h_source.html  (+274 more)
OCLib/: InProcClientWrapper.cpp  InProcServerWrapper.cpp  OCApi.cpp  OCObject.cpp  OCObserver.cpp  OCPlatform.cpp  OCProperties.cpp  OCReflect.cpp  OCResource.cpp  OCSecurityModel.cpp  OCServer.cpp  OCUtilities.cpp
OCTestApps/: OCClientTestApp.cpp  OCPlatformTestApp.cpp  OCServerTestApp.cpp  OCTestApp.h  makefile
android/: BuildInstructionsForAndroidAPI.txt  BuildInstructionsForAndroid_API.txt
bridging/: SConscript
build_common/: SConscript  external_builders.scons  external_libs.scons  thread.scons
cloud/: .gitignore  SConscript  pom.xml
csdk/: README  arduinodue.properties  arduinomega.properties  makefile
doc/: added-methods.rst
docs/: Doxyfile
examples/: Makefile  fridgeclient.cpp  fridgeserver.cpp  garageclient.cpp  garageserver.cpp  makefile  presenceclient.cpp  presenceserver.cpp  roomclient.cpp  roomserver.cpp  simpleclient.cpp  simpleclientHQ.cpp  simpleclientserver.cpp  simpleserver.cpp  simpleserverHQ.cpp  test_OCReflect.cpp  test_properties.cpp
extlibs/: buildDependencies.sh  hippomocks.scons
include/: IClientWrapper.h  IServerWrapper.h  InProcClientWrapper.h  InProcServerWrapper.h  InitializeException.h  OCApi.h  OCException.h  OCHeaderOption.h  OCObject.h  OCObserver.h  OCObserverHandler.h  OCPlatform.h  OCPlatformHandler.h  OCProperties.h  OCPropertyTypes.h  OCReflect.h  OCRepresentation.h  OCResource.h  OCResourceHandler.h  OCResourceRequest.h  OCResourceResponse.h  OCSecurityModel.h  OCServer.h  OCUtilities.h  OutOfProcClientWrapper.h  OutOfProcServerWrapper.h  ResourceInitException.h  StringConstants.h  WrapperFactory.h
java/: SConscript  build.gradle  settings.gradle
oc_logger/: Makefile
packaging/: cereal.tar.bz2  iotivity.spec  tinycbor.tar.bz2
plugins/: SConscript
releaseNotes/: Oct31st2014.txt  Sept2nd2014.txt
resource/: README.android.txt  README.setup.txt  Readme.scons.txt  SConscript  SConstruct  artifact_output_locations.txt  auto_build.sh  buildScript.mk  makefile  third_party_libs.scons  unit_tests.scons
resource/csdk/connectivity/unittests/tizen/tct/liboic/: CMakeLists.txt  tct-liboic-core.c  tct-liboic-core.h  utc-liboic.c
resource/csdk/connectivity/unittests/tizen/tct/liboic/bt/: utc-bt-liboic.c
resource/csdk/connectivity/unittests/tizen/tct/liboic/wifi/: utc-wifi-liboic.c
service/: SConscript  third_party_libs.scons
service/protocol-plugin/plugins/mqtt/lib/cpp/: CMakeLists.txt
service/soft-sensor-manager/SampleApp/tizen/ClientApp/: CMakeLists.txt  README  RELEASE.txt  build.sh  makefile_org
service/soft-sensor-manager/SampleApp/tizen/ClientApp/oic-sample/: CMakeLists.txt  com.samsung.oicapp-test.rule
service/soft-sensor-manager/SampleApp/tizen/ClientApp/oic-sample/src/: ISSMClientListener.h  SSMClient.cpp  SSMClient.h  oicapp-test.cpp  oicapp-test.h  oicapp-utils.c  oicapp-utils.h
service/soft-sensor-manager/SampleApp/tizen/ClientApp/packaging/: oic.service  oic.spec
service/soft-sensor-manager/SampleApp/tizen/SSMTesterApp/: .cproject  .project  .rds_delta  .sdk_delta.info  CMakeLists.txt  README  RELEASE.txt  makefile_org  tizen-manifest.xml
service/soft-sensor-manager/SampleApp/tizen/SSMTesterApp/inc/: ssmtesterapp.h
service/soft-sensor-manager/SampleApp/tizen/SSMTesterApp/oic-sample/: CMakeLists.txt  com.samsung.ssmtester.rule  com.samsung.ssmtester.xml
service/soft-sensor-manager/SampleApp/tizen/SSMTesterApp/oic-sample/src/: oicapp-log.h  oicapp-test.cpp  oicapp-test.h  oicapp-utils.c  oicapp-utils.h
service/soft-sensor-manager/SampleApp/tizen/SSMTesterApp/packaging/: ssm.manifest  ssm.spec
service/soft-sensor-manager/SampleApp/tizen/SSMTesterApp/res/: ui_controls.edc
service/soft-sensor-manager/SampleApp/tizen/SSMTesterApp/src/: ssmtesterapp.cpp
service/things-manager/sampleapp/tizen/switch/: CMakeLists.txt
service/things-manager/sampleapp/tizen/switch/inc/: switch.h
service/things-manager/sampleapp/tizen/switch/res/: sample-app.edc
service/things-manager/sampleapp/tizen/switch/src/: switch.cpp
src/: InProcClientWrapper.cpp  InProcServerWrapper.cpp  OCException.cpp  OCObject.cpp  OCPlatform.cpp  OCPlatform_impl.cpp  OCProperties.cpp  OCResource.cpp  OCUtilities.cpp
test/: .project  IUT_README  SConstruct  astyle-cpp-format.sh  astyle-java-format.sh
tools/: generate_report.sh
unittests/: README  makefile  tests.cpp
wsi/: .gitignore  AUTHORS  README.md  autodeploy.sh  build.sh  index.html  office.pem  package.json  server.js
(+9418 files in other folders)
